updated libraries; remove error if context is null